--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  <!-- jquery -->
  <script src="js/jquery-3.3.1.min.js"></script>
  <!-- bootstrap js -->
- <script src="js/bootstrap.bundle.min.js"></script>
+ //<script src="js/bootstrap.bundle.min.js"></script>
  <!-- script js -->
  <script src="js/app.js"></script>
 </body>
